charts/apps/media/radarr/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  routes:
    - match: 'Host(`radarr.svc.m00nlit.dev`)'
      kind: Rule
      middlewares:
        - name: vpn-only
          namespace: traefik
        - name: auth
          namespace: traefik
      services:
        - name: radarr
    - match: 'Host(`radarr.svc.m00nlit.dev`) && PathPrefix(`/api`)'
      kind: Rule
      middlewares:
        - name: vpn-only
          namespace: traefik
      services:
        - name: radarr
